--- a/src/static/global.css
+++ b/src/static/global.css
@@ -1,11 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 body {
-  font-family: "Libre Caslon Text", serif;
+  font-family: "Noto Sans JP", serif;
 }
 h1 {
+  font-family: "Libre Caslon Text", serif;
+  color: #4d4d4d;
   font-size: 32px;
+  line-height: 150%;
 }
 h2 {
+  font-family: "Libre Caslon Text", serif;
+
   font-size: 29px;
 }
 p {
@@ -13,4 +19,7 @@ p {
 }
 .Hero {
   height: 50vh;
+}
+.active {
+  color: #ffd75f;
 }
