--- a/src/static/global.css
+++ b/src/static/global.css
@@ -8,6 +8,7 @@ h1 {
   color: #4d4d4d;
   font-size: 32px;
   line-height: 150%;
+  font-weight: bold;
 }
 h2 {
   font-family: "Libre Caslon Text", serif;
